# ocaml-mariadb

./: .gitignore  .merlin  CHANGES.md  LICENSE  Makefile  README.md  _oasis  _tags  configure  discover.ml  dune  dune-project  dune-workspace  env  mariadb.opam  myocamlbuild.ml  opam  setup.ml
.github/: CODEOWNERS
.github/workflows/: workflow.yml
bindings/: META  dune  ffi_bindings.ml
detect/: detect.c
examples/: blocking_example.ml  dune  nonblocking_async_example.ml  nonblocking_lwt_example.ml
examples/async/: .merlin  dune  nonblocking_async_example.ml  nonblocking_async_stress_test.ml
examples/blocking/: blocking_example.ml  blocking_stress_test.ml  dune
examples/lwt/: .merlin  dune  nonblocking_lwt_example.ml  nonblocking_lwt_stress_test.ml
examples/nonblocking/: dune  nonblocking_stress_test.ml
examples/select/: dune  nonblocking_select_example.ml  nonblocking_select_stress_test.ml
lib/: META  bind.ml  binding_wrappers.ml  blocking.ml  common.ml  dune  field.ml  mariadb.ml  mariadb.mldylib  mariadb.mli  mariadb.mllib  mariadb_intf.ml  mariadb_nonblocking.mli  mariadb_nonblocking.mllib  nonblocking.ml  release.mllib  row.ml  time.ml  util.ml  wait_status.ml
lib_test/: test.ml  test_blocking_functor.ml  test_common.ml  test_nonblocking.ml  test_nonblocking_async.ml  test_nonblocking_functor.ml  test_nonblocking_lwt.ml  test_nonblocking_select.ml  test_prepared_statement.ml
stubgen/: dune  ffi_stubgen.ml  ffi_stubgen.ml.ab  ffi_types_stubgen.ml  ffi_types_stubgen.ml.ab
tests/: README.md
tests/blocking/: blocking_testsuite.ml  dune
tests/nonblocking/: dune  nonblocking_testsuite.ml
tests/nonblocking-async/: dune  nonblocking_testsuite_async.ml
tests/nonblocking-block/: dune  nonblocking_testsuite_block.ml
tests/nonblocking-lwt/: dune  nonblocking_testsuite_lwt.ml
