opam-version: "2.0"
name: "mariadb"
maintainer: "Andre Nathan <andrenth@gmail.com>"
authors: "Andre Nathan <andrenth@gmail.com>"
homepage: "https://github.com/andrenth/ocaml-mariadb"
bug-reports: "https://github.com/andrenth/ocaml-mariadb/issues"
license: "MIT"
dev-repo: "git+https://github.com/andrenth/ocaml-mariadb.git"
synopsis: "OCaml bindings for MariaDB"
description: "OCaml-MariaDB provides Ctypes-based bindings for MariaDB, including its nonblocking API."

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@default" {with-test} # but not @runtest since it would require a MariaDB server
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "ctypes" {>= "0.7.0"}
  "conf-mariadb"
  "conf-gcc"
  "dune"
  "dune-configurator"
  "async" {with-test}
  "lwt" {with-test}
]
